--- a/getX/getx_api/pubspec.yaml
+++ b/getX/getx_api/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: 4.3.4
   fancy_bottom_navigation: ^0.3.3
+  get_storage: ^2.0.3
   flutter: 
     sdk: flutter
 
